fix(breadcrumb): truncate using css not javascript

--- a/src/components/IconButton/_iconButton.scss
+++ b/src/components/IconButton/_iconButton.scss
@@ -1,11 +1,10 @@
 @use '#scss/allPartials' as *;
 
 .#{$px}-icon-button {
+  align-items: center;
+  display: flex;
+  justify-content: center;
   padding: 0;
-
-  & > svg {
-    position: absolute;
-  }
 
   &:focus-visible {
     &:focus-visible {
@@ -27,11 +26,8 @@
 
     & > svg {
       fill: $pure-black;
-      height: 100%;
       height: 1.5rem;
       margin-inline-end: unset;
-      position: absolute;
-      width: 100%;
       width: 1.5rem;
 
       path {
@@ -68,6 +64,10 @@
     padding: $spacing-xsm;
     width: 28px;
 
+    &:focus-visible {
+      border-radius: 100px;
+    }
+
     & > svg {
       fill: $pure-black;
       height: 1.25rem;
@@ -78,12 +78,6 @@
       path {
         fill: $pure-black;
       }
-    }
-  }
-
-  &--tertiary {
-    &:focus-visible {
-      border-radius: 100px;
     }
   }
 
